Add service binding provedure